Fixed z-index tweets

--- a/dev/css/modules/tweet.scss
+++ b/dev/css/modules/tweet.scss
@@ -4,7 +4,7 @@
   right: -350px;
   top: 0;
   width: 350px;
-  z-index: 5;
+  z-index: 11;
 
   .feed{
     height: 100%;
@@ -53,7 +53,7 @@
   right: 0;
   background-color: black;
   opacity: 0.8;
-  z-index: 4;
+  z-index: 10;
 }
 
 .active_overlay{
